kubernetes/kube-prod-d1/openbao/prod-d1/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-prod-d1-https
  namespace: openbao
  labels:
    kubernetes.io/service-name: pve-prod-d1-https-service
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.15.21.11"
