kubernetes/kube-prod-d1/openbao/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ingress
  namespace: openbao
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: openbao-prod-d1
    app.kubernetes.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serverstransport: openbao-openbao-backend-transport@kubernetescrd
spec:
  insecureSkipVerify: true
  rules:
    - host: openbao.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-application-ui
                port:
                  name: https
  tls:
    - hosts:
        - openbao.kube-prod-d1.mclacken.net
      secretName: openbao-certificate-secret
