kubernetes/kube-prod-d1/openbao/prod-d1/tcp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: openbao-ui
  namespace: openbao
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`openbao.kube-prod-d1.mclacken.net`)
      services:
        - name: openbao-application-ui
          port: "https"
  tls:
    passthrough: true
